# matching-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  instruction_mbti.txt  pyproject.toml  user_profiles_mbti_seed.json
coordination_agent/: __init__.py  agent.py  initial_state.json  prompts.py
coordination_agent/shared_libraries/: callbacks.py  constants.py  types.py
coordination_agent/sub_agents/matcher/: __init__.py  agent.py  instruction_spectrum.txt  prompt.py
coordination_agent/sub_agents/scheduler/: agent.py  prompt.py  tools.py
coordination_agent/sub_agents/writer/: agent.py  prompt.py
coordination_agent/tools/: memory.py
eval/: test_eval.py
eval/eval_data/: evalset23fe92.evalset.json  evalset516827.evalset.json
